--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -20,3 +20,7 @@ spring:
     user: ${spring.datasource.username}
     password: ${spring.datasource.password}
     locations: classpath:/db/migration
+springdoc:
+  api-docs:
+    path: /swagger-ui.html
+  packages-to-scan: io.github.wesleyosantos91.adapters.inbound.rest.controller
