--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -23,4 +23,4 @@ spring:
 springdoc:
   api-docs:
     path: /swagger-ui.html
-  packages-to-scan: io.github.wesleyosantos91.adapters.inbound.rest.controller
+  packages-to-scan: io.github.wesleyosantos91.adapter.inbound.rest.controller
