--- a/src/main/resources/ValidationMessages.properties
+++ b/src/main/resources/ValidationMessages.properties
@@ -1,5 +1,5 @@
-javax.validation.constraints.NotNull.message={0} is required
-javax.validation.constraints.NotBlank.message={0} not can am blank
-javax.validation.constraints.Size.message={0} must have a size between {min} and {max}
-javax.validation.constraints.Past.message={0} must be in the past
-javax.validation.constraints.Email.message={0} please provide a valid email address
+javax.validation.constraints.NotNull.message=Is required
+javax.validation.constraints.NotBlank.message=Not can am blank
+javax.validation.constraints.Size.message=Must have a size between {min} and {max}
+javax.validation.constraints.Past.message=Must be in the past
+javax.validation.constraints.Email.message=Please provide a valid email address
